# novaGround

./: .clang-format  .clang-tidy  .clang_tidy  CMakeLists.txt  Dockerfile  README.md  main.cpp  meson.build  testing  testing.cpp
dependencies/: Adafruit_PWMServoDriver.cpp  Adafruit_PWMServoDriver.h  meson.build
src/: Sensor.cpp  Sensor.h  dummysensor  dummysensor.cpp  dummysensor.h  main  main.cpp  mccdaq.cpp  mccdaq.h  meson.build  relayDriver.cpp  testing  testing.cpp
src/actuators/: actuators.cpp  actuators.h
src/entities/: SensorManager.h  meson.build
src/entities/Sensor/: DummySensor.cpp  DummySensor.h  Sensor.h
src/entities/SensorTypeManager/: SensorTypeManager.h
src/entities/control/: meson.build
src/entities/control/Actuator/: Actuator.h  BoolActuator.h  DummyActuator.cpp  DummyActuator.h  RelayActuator.cpp  RelayActuator.h
src/entities/control/ActuatorManager/: ActuatorManager.h  DummyActuatorManger.h
src/entities/dataAcquisition/Sensor/: DummySensor.cpp  DummySensor.h  Sensor.h
src/entities/dataAcquisition/SensorManager/: SensorManager.cpp  SensorManager.h
src/interfaces/: gpio_manager.cpp  gpio_manager.hpp  io_expander.cpp  io_expander.hpp  meson.build  servo.cpp  servo.hpp
src/interfaces/ActuatorInterface/: meson.build
src/interfaces/ActuatorInterface/Actuator/: Actuator.h  DummyActuator.cpp  DummyActuator.h  meson.build
src/interfaces/ActuatorInterface/ActuatorManager/: ActuatorManager.h  DummyActuatorManager.h  meson.build
src/interfaces/Actuators/: meson.build
src/interfaces/Actuators/Actuator/: DummyActuator.h
src/interfaces/Actuators/ActuatorManager/: ActuatorManager.h
src/interfaces/SensorInterface/: meson.build
src/interfaces/SensorInterface/Sensor/: DummySensor.cpp  DummySensor.h  Sensor.h  mccdaq.cpp  mccdaq.h  meson.build
src/interfaces/SensorInterface/SensorManager/: DummySensorManager.h  SensorManager.h  meson.build
src/interfaces/Sensors/: meson.build
src/interfaces/Sensors/Sensor/: DummySensor.cpp
src/interfaces/Sensors/SensorManager/: SensorManager.h
src/sensors/: sensors.cpp  sensors.h
